# oemof_api

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  README.md  docker-compose.yml  environment.yml  main.py  pyproject.toml
.envs/: .local
data/datapackages/examples/dispatch/: datapackage.json
fastapi_app/: Dockerfile  database.py  settings.py  simulation.py  webapp.py
fastapi_app/templates/: index.html  submitted_task.html
task_queue/: Dockerfile
