[tool.poetry]
name = "oemof_api"
version = "0.1.0"
description = "API to simulate energysystems using energy datapackages from oemof_tabular"
authors = ["hendrik.huyskens <hendrik.huyskens@rl-institut.de>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
aiofiles = "^0.8.0"
Jinja2 = "^3.1.2"
uvicorn = "^0.18.2"
redis = "^4.3.4"
rq = "^1.10.1"
click = "^7.0"
pandas = "1.1.5"
pyomo = "5.7.2"
tableschema = "1.3.0"
datapackage = "1.5.1"
python-dotenv = "^0.20.0"
oemoflex = {git = "https://github.com/rl-institut/oemoflex.git", rev = "dev"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
flake8 = "^4.0.1"
black = "^21.12b0"
pylint = "^2.14.4"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.7.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
darglint = "^1.8.1"
flake8-eradicate = "^1.2.1"
flake8-isort = "^4.1.1"
flake8-pytest-style = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
